コメント削除

--- a/mnist-keras-cnn.ipynb
+++ b/mnist-keras-cnn.ipynb
@@ -1,10 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "https://github.com/fchollet/deep-learning-with-python-notebooks.git より\n",
     "5.1-introduction-to-convnets.ipynb\n",
@@ -41,12 +39,14 @@
     "minute what they do concretely.\n",
     "Importantly, a convnet takes as input tensors of shape `(image_height, image_width, image_channels)` (not including the batch dimension). \n",
     "In our case, we will configure our convnet to process inputs of size `(28, 28, 1)`, which is the format of MNIST images. We do this via \n",
-    "passing the argument `input_shape=(28, 28, 1)` to our first layer."
+    "passing the argument `input_shape=(28, 28, 1)` to our first layer.\n",
+    "\n",
+    "畳み込み層とプーリング層のスタック。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,33 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_4 (Conv2D)            (None, 26, 26, 32)        320       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 13, 13, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 11, 11, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 5, 5, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 3, 3, 64)          36928     \n",
-      "=================================================================\n",
-      "Total params: 55,744\n",
-      "Trainable params: 55,744\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -118,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,39 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_4 (Conv2D)            (None, 26, 26, 32)        320       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 13, 13, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 11, 11, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 5, 5, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 3, 3, 64)          36928     \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 576)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 64)                36928     \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                650       \n",
-      "=================================================================\n",
-      "Total params: 93,322\n",
-      "Trainable params: 93,322\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -186,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,29 +152,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/1\n",
-      "60000/60000 [==============================] - 26s 431us/step - loss: 0.1795 - acc: 0.9434\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x10a9d9c88>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "エポック数は5でやると精度高くなるが，cpuだと学習遅いので1だけでやる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.compile(optimizer='rmsprop',\n",
     "              loss='categorical_crossentropy',\n",
@@ -245,37 +179,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000/10000 [==============================] - 2s 202us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_loss, test_acc = model.evaluate(test_images, test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9823"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_acc"
    ]
