--- a/mnist_chainer.ipynb
+++ b/mnist_chainer.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Network definition"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Network definition\n",
     "class MLP(chainer.Chain):\n",
     "\n",
     "    def __init__(self, n_units, n_out):\n",
@@ -47,12 +53,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 引数"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 引数\n",
     "class Args(object):\n",
     "    def __init__(self):\n",
     "        self.batchsize = 100\n",
@@ -66,21 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU: -1\n",
-      "# unit: 50\n",
-      "# Minibatch-size: 100\n",
-      "# epoch: 2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "args = Args()\n",
     "print('GPU: {}'.format(args.gpu))\n",
@@ -91,46 +91,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Set up a neural network to train\n",
-    "# Classifier reports softmax cross entropy loss and accuracy at every\n",
-    "# iteration, which will be used by the PrintReport extension below.\n",
-    "model = L.Classifier(MLP(args.unit, 10))"
+    "学習のためのニューラルネットワークをセット。\n",
+    "分類機のソフトマックス交差エントロピー誤差と精度のをループ毎に出力。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<chainer.optimizers.adam.Adam at 0x10f8d8be0>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Setup an optimizer\n",
+    "model = L.Classifier(MLP(args.unit, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup an optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "optimizer = chainer.optimizers.Adam()\n",
     "optimizer.setup(model)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load the MNIST dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the MNIST dataset\n",
     "train, test = chainer.datasets.get_mnist()\n",
     "\n",
     "train_iter = chainer.iterators.SerialIterator(train, args.batchsize)\n",
@@ -138,61 +144,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set up a trainer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up a trainer\n",
     "updater = training.updaters.StandardUpdater(train_iter, optimizer, device=args.gpu)\n",
     "trainer = training.Trainer(updater, (args.epoch, 'epoch'), out=args.out)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate the model with the test dataset for each epoch"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate the model with the test dataset for each epoch\n",
     "trainer.extend(extensions.Evaluator(test_iter, model, device=args.gpu))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Dump a computational graph from 'loss' variable at the first iteration\n",
-    "# The \"main\" refers to the target link of the \"main\" optimizer.\n",
-    "trainer.extend(extensions.dump_graph('main/loss'))"
+    "Dump a computational graph from 'loss' variable at the first iteration\n",
+    "The \"main\" refers to the target link of the \"main\" optimizer."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take a snapshot for each specified epoch\n",
+    "trainer.extend(extensions.dump_graph('main/loss'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Take a snapshot for each specified epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frequency = args.epoch if args.frequency == -1 else max(1, args.frequency)\n",
     "trainer.extend(extensions.snapshot(), trigger=(frequency, 'epoch'))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ログのレポートを作成o"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a log of evaluation statistics for each epoch\n",
     "trainer.extend(extensions.LogReport())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,68 +269,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch       main/loss   validation/main/loss  main/accuracy  validation/main/accuracy  elapsed_time\n",
-      "\u001b[J     total [####..............................................]  8.33%\n",
-      "this epoch [########..........................................] 16.67%\n",
-      "       100 iter, 0 epoch / 2 epochs\n",
-      "       inf iters/sec. Estimated time to finish: 0:00:00.\n",
-      "\u001b[4A\u001b[J     total [########..........................................] 16.67%\n",
-      "this epoch [################..................................] 33.33%\n",
-      "       200 iter, 0 epoch / 2 epochs\n",
-      "    287.38 iters/sec. Estimated time to finish: 0:00:03.479753.\n",
-      "\u001b[4A\u001b[J     total [############......................................] 25.00%\n",
-      "this epoch [#########################.........................] 50.00%\n",
-      "       300 iter, 0 epoch / 2 epochs\n",
-      "    287.01 iters/sec. Estimated time to finish: 0:00:03.135739.\n",
-      "\u001b[4A\u001b[J     total [################..................................] 33.33%\n",
-      "this epoch [#################################.................] 66.67%\n",
-      "       400 iter, 0 epoch / 2 epochs\n",
-      "    287.29 iters/sec. Estimated time to finish: 0:00:02.784643.\n",
-      "\u001b[4A\u001b[J     total [####################..............................] 41.67%\n",
-      "this epoch [#########################################.........] 83.33%\n",
-      "       500 iter, 0 epoch / 2 epochs\n",
-      "     286.4 iters/sec. Estimated time to finish: 0:00:02.444139.\n",
-      "\u001b[4A\u001b[J1           0.40664     0.197303              0.888283       0.9433                    2.2135        \n",
-      "\u001b[J     total [#########################.........................] 50.00%\n",
-      "this epoch [..................................................]  0.00%\n",
-      "       600 iter, 1 epoch / 2 epochs\n",
-      "       242 iters/sec. Estimated time to finish: 0:00:02.479350.\n",
-      "\u001b[4A\u001b[J     total [#############################.....................] 58.33%\n",
-      "this epoch [########..........................................] 16.67%\n",
-      "       700 iter, 1 epoch / 2 epochs\n",
-      "    251.78 iters/sec. Estimated time to finish: 0:00:01.985893.\n",
-      "\u001b[4A\u001b[J     total [#################################.................] 66.67%\n",
-      "this epoch [################..................................] 33.33%\n",
-      "       800 iter, 1 epoch / 2 epochs\n",
-      "    257.92 iters/sec. Estimated time to finish: 0:00:01.550873.\n",
-      "\u001b[4A\u001b[J     total [#####################################.............] 75.00%\n",
-      "this epoch [#########################.........................] 50.00%\n",
-      "       900 iter, 1 epoch / 2 epochs\n",
-      "    263.42 iters/sec. Estimated time to finish: 0:00:01.138862.\n",
-      "\u001b[4A\u001b[J     total [#########################################.........] 83.33%\n",
-      "this epoch [#################################.................] 66.67%\n",
-      "      1000 iter, 1 epoch / 2 epochs\n",
-      "    266.28 iters/sec. Estimated time to finish: 0:00:00.751077.\n",
-      "\u001b[4A\u001b[J     total [#############################################.....] 91.67%\n",
-      "this epoch [#########################################.........] 83.33%\n",
-      "      1100 iter, 1 epoch / 2 epochs\n",
-      "    267.93 iters/sec. Estimated time to finish: 0:00:00.373226.\n",
-      "\u001b[4A\u001b[J2           0.174081    0.144491              0.949417       0.9564                    4.54156       \n",
-      "\u001b[J     total [##################################################] 100.00%\n",
-      "this epoch [..................................................]  0.00%\n",
-      "      1200 iter, 2 epoch / 2 epochs\n",
-      "    249.71 iters/sec. Estimated time to finish: 0:00:00.\n",
-      "\u001b[4A\u001b[J"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.run()"
    ]
