--- a/mnist-keras-nn.ipynb
+++ b/mnist-keras-nn.ipynb
@@ -6,61 +6,18 @@
    "source": [
     "https://github.com/fchollet/deep-learning-with-python-notebooks.git より\n",
     "2.1-a-first-look-at-a-neural-network\n",
-    "を改変"
+    "を改変\n",
+    "日本語訳は『PythonとKerasによるディープラーニング』を参考にした。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kei/.pyenv/versions/anaconda3-4.1.1/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'2.2.0'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
     "keras.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# A first look at a neural network\n",
-    "\n",
-    "This notebook contains the code samples found in Chapter 2, Section 1 of [Deep Learning with Python](https://www.manning.com/books/deep-learning-with-python?a_aid=keras&a_bid=76564dff). Note that the original text features far more content, in particular further explanations and figures: in this notebook, you will only find source code and related comments.\n",
-    "\n",
-    "----\n",
-    "\n",
-    "We will now take a look at a first concrete example of a neural network, which makes use of the Python library Keras to learn to classify \n",
-    "hand-written digits. Unless you already have experience with Keras or similar libraries, you will not understand everything about this \n",
-    "first example right away. You probably haven't even installed Keras yet. Don't worry, that is perfectly fine. In the next chapter, we will \n",
-    "review each element in our example and explain them in detail. So don't worry if some steps seem arbitrary or look like magic to you! \n",
-    "We've got to start somewhere.\n",
-    "\n",
-    "The problem we are trying to solve here is to classify grayscale images of handwritten digits (28 pixels by 28 pixels), into their 10 \n",
-    "categories (0 to 9). The dataset we will use is the MNIST dataset, a classic dataset in the machine learning community, which has been \n",
-    "around for almost as long as the field itself and has been very intensively studied. It's a set of 60,000 training images, plus 10,000 test \n",
-    "images, assembled by the National Institute of Standards and Technology (the NIST in MNIST) in the 1980s. You can think of \"solving\" MNIST \n",
-    "as the \"Hello World\" of deep learning -- it's what you do to verify that your algorithms are working as expected. As you become a machine \n",
-    "learning practitioner, you will see MNIST come up over and over again, in scientific papers, blog posts, and so on."
    ]
   },
   {
@@ -72,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,65 +46,33 @@
     "\"test set\", `test_images` and `test_labels`. Our images are encoded as Numpy arrays, and the labels are simply an array of digits, ranging \n",
     "from 0 to 9. There is a one-to-one correspondence between the images and the labels.\n",
     "\n",
-    "Let's have a look at the training data:"
+    "Let's have a look at the training data:\n",
+    "training data: 訓練データ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(60000, 28, 28)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_images.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "60000"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5, 0, 4, ..., 5, 6, 8], dtype=uint8)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_labels"
    ]
@@ -156,65 +81,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's have a look at the test data:"
+    "Let's have a look at the test data:\n",
+    "test data = テストデータ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 28, 28)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_images.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10000"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([7, 2, 1, ..., 4, 5, 6], dtype=uint8)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_labels"
    ]
@@ -223,16 +116,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our workflow will be as follow: first we will present our neural network with the training data, `train_images` and `train_labels`. The \n",
-    "network will then learn to associate images and labels. Finally, we will ask the network to produce predictions for `test_images`, and we \n",
-    "will verify if these predictions match the labels from `test_labels`.\n",
-    "\n",
-    "Let's build our network -- again, remember that you aren't supposed to understand everything about this example just yet."
+    "1. まず`train_images` and `train_labels`を用いてニューラルネットを表現。\n",
+    "2. 画像とラベルを使ってニューラルネットワークの学習\n",
+    "3. テスト画像のラベルをネットワークで予測して，テストラベルとどのぐらい適合するか確かめる。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,31 +139,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ニューラルネットの中心的な構成要素は\"層(layer)\".\n",
+    "段階的な\"データ蒸留\"を実装することになる。\n",
     "\n",
-    "The core building block of neural networks is the \"layer\", a data-processing module which you can conceive as a \"filter\" for data. Some \n",
-    "data comes in, and comes out in a more useful form. Precisely, layers extract _representations_ out of the data fed into them -- hopefully \n",
-    "representations that are more meaningful for the problem at hand. Most of deep learning really consists of chaining together simple layers \n",
-    "which will implement a form of progressive \"data distillation\". A deep learning model is like a sieve for data processing, made of a \n",
-    "succession of increasingly refined data filters -- the \"layers\".\n",
+    "このニューラルネットは2層の全結合層で構成されている。\n",
+    "２つ目の層がソフトマックス層。合計すると1になる。いずれかに所属している確率。\n",
     "\n",
-    "Here our network consists of a sequence of two `Dense` layers, which are densely-connected (also called \"fully-connected\") neural layers. \n",
-    "The second (and last) layer is a 10-way \"softmax\" layer, which means it will return an array of 10 probability scores (summing to 1). Each \n",
-    "score will be the probability that the current digit image belongs to one of our 10 digit classes.\n",
+    "コンパイルステップの一部として，３つの要素を選択する必要がある。\n",
     "\n",
-    "To make our network ready for training, we need to pick three more things, as part of \"compilation\" step:\n",
-    "\n",
-    "* A loss function: the is how the network will be able to measure how good a job it is doing on its training data, and thus how it will be \n",
-    "able to steer itself in the right direction.\n",
-    "* An optimizer: this is the mechanism through which the network will update itself based on the data it sees and its loss function.\n",
-    "* Metrics to monitor during training and testing. Here we will only care about accuracy (the fraction of the images that were correctly \n",
-    "classified).\n",
-    "\n",
-    "The exact purpose of the loss function and the optimizer will be made clear throughout the next two chapters."
+    "* 損失関数\n",
+    "* オプティマイザ\n",
+    "* 訓練とテストを監視するための指標"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,15 +167,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Before training, we will preprocess our data by reshaping it into the shape that the network expects, and scaling it so that all values are in \n",
-    "the `[0, 1]` interval. Previously, our training images for instance were stored in an array of shape `(60000, 28, 28)` of type `uint8` with \n",
-    "values in the `[0, 255]` interval. We transform it into a `float32` array of shape `(60000, 28 * 28)` with values between 0 and 1."
+    "データ前処理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,12 +187,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need to categorically encode the labels, a step which we explain in chapter 3:"
+    "ラベル前処理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,42 +206,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are now ready to train our network, which in Keras is done via a call to the `fit` method of the network: \n",
-    "we \"fit\" the model to its training data."
+    "モデルを訓練データに適合（fit）させる"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "60000/60000 [==============================] - 2s 37us/step - loss: 0.2572 - acc: 0.9264\n",
-      "Epoch 2/5\n",
-      "60000/60000 [==============================] - 2s 36us/step - loss: 0.1053 - acc: 0.9688\n",
-      "Epoch 3/5\n",
-      "60000/60000 [==============================] - 2s 35us/step - loss: 0.0682 - acc: 0.9794\n",
-      "Epoch 4/5\n",
-      "60000/60000 [==============================] - 2s 36us/step - loss: 0.0493 - acc: 0.9848\n",
-      "Epoch 5/5\n",
-      "60000/60000 [==============================] - 2s 35us/step - loss: 0.0374 - acc: 0.9888\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x118de3908>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "network.fit(train_images, train_labels, epochs=5, batch_size=128)"
    ]
@@ -371,42 +222,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Two quantities are being displayed during training: the \"loss\" of the network over the training data, and the accuracy of the network over \n",
-    "the training data.\n",
-    "\n",
-    "We quickly reach an accuracy of 0.989 (i.e. 98.9%) on the training data. Now let's check that our model performs well on the test set too:"
+    "訓練データではある程度の精度が出た。\n",
+    "テストデータでの精度も確認してみよう。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000/10000 [==============================] - 0s 33us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_loss, test_acc = network.evaluate(test_images, test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_acc: 0.9785\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('test_acc:', test_acc)"
    ]
@@ -415,16 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Our test set accuracy turns out to be 97.8% -- that's quite a bit lower than the training set accuracy. \n",
-    "This gap between training accuracy and test accuracy is an example of \"overfitting\", \n",
-    "the fact that machine learning models tend to perform worse on new data than on their training data. \n",
-    "Overfitting will be a central topic in chapter 3.\n",
-    "\n",
-    "This concludes our very first example -- you just saw how we could build and a train a neural network to classify handwritten digits, in \n",
-    "less than 20 lines of Python code. In the next chapter, we will go in detail over every moving piece we just previewed, and clarify what is really \n",
-    "going on behind the scenes. You will learn about \"tensors\", the data-storing objects going into the network, about tensor operations, which \n",
-    "layers are made of, and about gradient descent, which allows our network to learn from its training examples."
+    "少しだけ過学習している。"
    ]
   },
   {
